# ART

./: .dockerignore  .gitignore  .gitlab-ci.yml  .ninja_deps  .ninja_log  ART_Version_Numbers.h  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.ninja
Extension_Example/export_spectrum/: CMakeLists.txt
Extension_Example/export_spectrum/cmake_modules/: FindLCMS2.cmake  FindOPENEXR.cmake
Extension_Example/export_spectrum/src/: export_spectrum.m
Source/ClassLibraries/: ART_ClassLibraries.m  ApplicationSupport.h  ApplicationSupport.m  CMakeLists.txt  ColourAndLightSubsystem.h  ColourAndLightSubsystem.m
Source/ClassLibraries/ARM_Interface/: ARM_Action.h  ARM_Action.m  ARM_ActionSequence.h  ARM_ActionSequence.m  ARM_Camera.h  ARM_Camera.m  ARM_Colour.h  ARM_Colour.m  ARM_EnvironmentMaterial.h  ARM_EnvironmentMaterial.m  ARM_Expression.h  ARM_Expression.m  ARM_Foundation.h  ARM_Foundation.m  ARM_ImageSampler.h  ARM_ImageSampler.m  ARM_Lightsource.m  ARM_PathspaceIntegrator.h  ARM_PathspaceIntegrator.m  ARM_PhaseFunction.m  ARM_RayCasting.h  ARM_RayCasting.m  ARM_Scenegraph.h  ARM_Scenegraph.m  ARM_Shape.m  ARM_SkyModel.m  ARM_SurfaceMaterial.m  ARM_Trafo.h  ARM_Trafo.m  ARM_VolumeData.m  ARM_VolumeMaterial.h  ARM_VolumeMaterial.m  ART_ARM_Interface.h  ART_ARM_Interface.m  ArNode_ARM_CSG_Operators.m  ArNode_ARM_GenericAttributes.h  ArNode_ARM_GenericAttributes.m  ArNode_ARM_SpecificAttributes.h  ArNode_ARM_SpecificAttributes.m
Source/ClassLibraries/ActionSequence/: ART_ActionSequence.h  ART_ActionSequence.m  ArnActionSequence.h  ArnActionSequence.m  ArnNodeAction.m  ArnNodeStack.m  ArnScene.h  ArnScene.m  ScenegraphActions.h  ScenegraphActions.m
Source/ClassLibraries/Camera/: ART_Camera.m  ArnCamera.h  ArnCamera.m  ArnCylinderCamera.h  ArnCylinderCamera.m  ArnFisheyeCamera.m  ArnPerspectiveCamera.m  ArnSphericalCamera.m  ArnThinLensCamera.h  ArnThinLensCamera.m  ArnUniformFisheyeCamera.h  ArnUniformFisheyeCamera.m
Source/ClassLibraries/ColourAndSpectra/: ART_ColourAndSpectra.h  ART_ColourAndSpectra.m  ArnBlackbodyRadiation.h  ArnBlackbodyRadiation.m  ArnCalculatedSpectrum.h  ArnCalculatedSpectrum.m  ArnColourMatchingFunctions.m  ArnColourSpace.m  ArnColourStandardImplementation.h  ArnColourTransform.h  ArnColourTransform.m  ArnConstSpectrum.m  ArnGaussianSpectrum.m  ArnImageMap.m  ArnRSSpectrum2D.h  ArnRSSpectrum2D.m  ArnSellmeierDispersion.m  ArnSyntheticFluorescentSpectrum.h  ArnSyntheticFluorescentSpectrum.m
Source/ClassLibraries/EmissiveSurfaceMaterial/: ART_DefaultEmissiveSurfaceMaterial.m  ART_EmissiveSurfaceMaterial.h  ART_EmissiveSurfaceMaterial.m  ArnFresnelEmissiveSurfaceMaterial.h  ArnFresnelEmissiveSurfaceMaterial.m  ArnLambertEmissiveSurfaceMaterial.m  ArnLambertEmissiveSurfaceMaterialConst.h  ArnLambertEmissiveSurfaceMaterialConst.m
Source/ClassLibraries/EnvironmentMaterial/: ART_DefaultEnvironmentMaterial.m  ART_EnvironmentMaterial.m  ArnHosekSkyModel_EnvironmentMaterial.m  ArnPragueSkyModel_EnvironmentMaterial.m  ArnPreethamSkyModel_EnvironmentMaterial.m  ArnUniformEnvironmentMaterial.h  ArnUniformEnvironmentMaterial.m
Source/ClassLibraries/Expression/: ART_Expression.m  ArnValConstants.h  ArnValConstants.m  ArnValEnvConstantsPoint.m  ArnValMacros.h  ArnValMathFunctions.h  ArnValMathFunctions.m  ArnValNoise.m  ArnValOperators.h  ArnValOperators.m
Source/ClassLibraries/ImageAction/: ART_ImageActions.h  ART_ImageActions.m  ActionsForPolarisationImages.m  ArnDualImageManipulationAction.m  ArnImageOperators.m  ArnSingleImageManipulationAction.m  ImageComparisonActions.h  ImageComparisonActions.m  ImageConversionActions.m  MiscellaneousImageActions.h  MiscellaneousImageActions.m  TonemappingImageActions.m
Source/ClassLibraries/ImageData/: ART_ImageData.m  ArcImageMetrics.m  ArnFileImage.h  ArnFileImage.m  ArnImageInfo.h  ArnImageInfo.m  ArnPartImage.h  ArnPartImage.m  ArnPlainImage.m
Source/ClassLibraries/ImageFileFormat/: ART_ImageFileFormat.h  ART_ImageFileFormat.m  ArfARTCSP.m  ArfARTGSC.h  ArfARTGSC.m  ArfARTRAW.m  ArfGreyCSV.h  ArfGreyCSV.m  ArfJPEG.h  ArfJPEG.m  ArfOpenEXRRGB.h  ArfOpenEXRRGB.m  ArfOpenEXRSpectral.m  ArfOpenEXRWrapper.cpp  ArfOpenEXRWrapper.h  ArfRAWRasterImage.m  ArfRasterImage.m  ArfTIFF.m  CMakeLists.txt  OpenEXRSettings.h  OpenEXRSettings.h.in
Source/ClassLibraries/ImageSampler/: ART_ImageSampler.m  ArnImageSampler.m  ArnImageSamplerBase.h  ArnImageSamplerBase.m  ArnImageSamplerRGBA.m  ArnMidpointImageSamplerRGBA.m  ArnPixelSampler.m  ArnReconstructionKernel.m  ArnStochasticBackwardsSampler.h  ArnStochasticBackwardsSampler.m  ArnStochasticImageSampler.m  ArnStochasticImageSamplerRGBA.h  ArnStochasticImageSamplerRGBA.m  ArnStochasticSampler.h  ArnStochasticSampler.m  ArnStochasticSamplerVerticalMirror.m  ArnTiledStochasticSampler.h  ArnTiledStochasticSampler.m
Source/ClassLibraries/Lightsource/: ART_Lightsource.m  ArcAmbientLightsource.h  ArcAmbientLightsource.m  ArcAreaLightsource.h  ArcAreaLightsource.m  ArcComplexSkydomeLightsource.m  ArcInfiniteSphereLightsource.h  ArcInfiniteSphereLightsource.m  ArcLightsource.h  ArcLightsource.m  ArcPointLightsource.m  ArcSkydomeLightsource.m  ArnLightsourceCollection.h  ArnLightsourceCollection.m  ArnLightsourceCollector.h  ArnLightsourceCollector.m
Source/ClassLibraries/MiscellaneousClasses/: ART_MiscellaneousClasses.h  ART_MiscellaneousClasses.m  ArIntersectionList.h  ArIntersectionList.m  ArTraversalState.m  ArcBBoxCache.m  ArcEvaluationEnvironment.m  ArcGruenschlossHalton.h  ArcGruenschlossHalton.mm  ArcHashgrid.h  ArcHashgrid.m  ArcIntersection.h  ArcIntersection.m  ArcMeasurementEstimators.m  ArcMessageQueue.m  ArcOption.m  ArcParameterRange.m  ArcParameterisation.m  ArcPhaseInterfaceCache.h  ArcPhaseInterfaceCache.m  ArcPhaseInterfaceIsotropic.m  ArcPointContext.h  ArcPointContext.m  ArcPointInSpace.h  ArcPointInSpace.m  ArcRandomGenerator.h  ArcRandomGenerator.m  ArcRayCounter.h  ArcRayCounter.m  ArcRayEndpoint.m  CMakeLists.txt  (+11 more)
Source/CommandLineTools/: CMakeLists.txt
Source/Foundation/: ART_Foundation.h  ART_Foundation.m  CMakeLists.txt  FoundationAssertionMacros.h
(+1186 files in other folders)
