add_subdirectory (arm2art)
add_subdirectory (art_imagetool)
add_subdirectory (art_imagesnr)
add_subdirectory (art_imagediff)
add_subdirectory (artist)
add_subdirectory (bugblatter)
add_subdirectory (greymap) 
add_subdirectory (impresario)
add_subdirectory (polvis)
add_subdirectory (tonemap)
add_subdirectory (structureStressTest)
